gcc/testsuite/rust/rustc/ui/rfc-1937-termination-trait/termination-trait-not-satisfied.rs
struct ReturnType {}

fn main() -> ReturnType { // { dg-error ".E0277." "" { target *-*-* } }
    ReturnType {}
}

